--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=AdministracionEventos
 
-server.port=8080
+server.port=${PORT:8080}
 
 #spring.datasource.url = jdbc:mysql://localhost:3306/frases_escom
 #spring.datasource.password = 1234root
